Fix issue heading align text on home banner
Fix issue heading align text on home banner

--- a/medstar-01/assets/scss/components/_banner-slider.scss
+++ b/medstar-01/assets/scss/components/_banner-slider.scss
@@ -16,6 +16,7 @@
             right: 0;
             padding: 50px;
             margin: auto;
+            h2,
             .h2 {
                 line-height: 1.2em;
                 text-align: center;
@@ -42,6 +43,7 @@
             right: 0;
             padding: 50px;
             margin: auto;
+            h2,
             .h2 {
                 line-height: 1.2em;
                 text-align: right;
@@ -68,6 +70,7 @@
             right: 0;
             padding: 50px;
             margin: auto;
+            h2,
             .h2 {
                 line-height: 1.2em;
                 text-align: center;
